Change some of the filler text into real text

--- a/adopt.html
+++ b/adopt.html
@@ -28,14 +28,26 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid">
+    <section class="grid wrapper">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Adoption Process</h1>
-        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+        <ol class="gutter">
+          <li>All applicants must fill out the adoption application below.</li>
+          <li>Freedom Dog Rescue will review your application to determine if you are a good match. You will receive either an email or phone call to discuss any further detail not answered on the application.</li>
+          <li>We will verify your references listed on the form at this point.</li>
+          <li>A home visit is required at this stage as we need to verify the environment for the dog. This is mandatory for the process to continue. This allows us to see any potential problems that may arise that was not addressed in the application and it lets us assess if the dog is suitable for you.</li>
+          <li>Once the home environment is approved, we will schedule a "meet and greet" so that the adopter and the dog are able to meet. All members of the household must be present so that we can observe the interaction between both parties. This allows us to see any potential issues.</li>
+          <li>If the meeting is a success and everyone in the household is in agreement to adopt the dog then you will sign the adoption agreement and pay the adoption fee. These fees allow us to help other dogs.</li>
+        </ol>
       </div>
       <div class="unit gutter pad-t">
         <h2 class="push-1-2">Adoption Fee</h2>
-        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+        <p class="push-1-2">All our dogs have adoption fees based on their age. These adoption fees help us cover the cost of taking care of other dogs which includes feeding, medicating, and housing them. It's necessary in order for us to continue our rescue work. None of this money goes towards anything besides the dogs.</p>
+        <ol class="gutter">
+          <li>Under 2 years old: $500</li>
+          <li>2 to 7 years old: $400</li>
+          <li>Over 8 years old: $300</li>
+        </ol>
       </div>
     </section>
   </main>
