--- a/rescues.html
+++ b/rescues.html
@@ -28,19 +28,22 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid">
+    <section class="grid wrapper">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Available Rescues</h1>
-        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+        <p class="push-1-2">These are all the dogs that are currently available for adoption. All the dogs have a name and will have a description on their personality to help you figure out if the dog is a good match for you. Please keep in mind their personality or breed traits as they can strongly sway how well the dog will thrive in your home.</p>
       </div>
     </section>
 
     <section>
       <ul class="list-group grid push-0">
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/collie-snow.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/collie-snow.jpg" alt="" aria-details="collie-in-snow">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Ellie</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
@@ -51,9 +54,12 @@
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/corgi.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/corgi.jpg" alt="" aria-details="corgi-indoors">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Honey</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
@@ -64,9 +70,12 @@
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/husky.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/husky.jpg" alt="" aria-details="white-husky">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Bolt</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
@@ -77,9 +86,12 @@
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/pug.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/pug.jpg" alt="" aria-details="pug">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Otis</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
@@ -90,9 +102,12 @@
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/shiba-inu.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/shiba-inu.jpg" alt="" aria-details="shiba-inu">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Chikage</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
@@ -103,9 +118,12 @@
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
-          <div class="grid">
+          <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/pitbull-leaves.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/pitbull-leaves.jpg" alt="" aria-details="pitbull-with-leaves">
+            </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h4 class="gutter white">Poppy</h4>
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
