--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="push-1-2">GENERAL INQUIRIES: FREEDOMDOGRESCUE@GMAIL.COM</p>
         <p class="push-1-2">DONATIONS: FINANCE@FREEDOMDOGRESCUE.CA</p>
       </div>
-      <div class="unit l-1-2 island">
+      <div class="unit xs-1 m-1-2 island">
         <div class="embed embed-4by3">
           <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="" aria-details="3-brown-puppies">
         </div>
