--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <section class="grid">
       <div class="unit xs-1 m-1-2 gutter pad-t">
         <h3 class="push-1-2">About Us</h3>
-        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity that was founded in Ottawa in February 2015. We are an all-breed, all-sized foster based rescue that operates out of Ottawa and the surroundings.</p>
+        <p class="push-1-2">Our goal here is to rescue homeless and abandoned dogs. This includes from shelters and surrenders from owners who cannot keep their dogs any longer.</p>
+        <p class="push-1-2">We work with volunteers, foster homes, local veterinarians, and trainers. This allows us to rescue dogs in need and give them a temporary home until they can find one to call forever.</p>
       </div>
       <div class="unit l-1-2 island">
         <div class="embed embed-4by3">
