--- a/adopt.html
+++ b/adopt.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>FDR Adopting</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -20,18 +22,18 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li><a class="no-line gutter" href="index.html">Home</a></li>
-        <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="gutter" href="index.html">Home</a></li>
+        <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
+        <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid wrapper">
+    <section class="grid gutter-2">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Adoption Process</h1>
-        <ol class="gutter">
+        <ol class="gutter-2">
           <li>All applicants must fill out the adoption application below.</li>
           <li>Freedom Dog Rescue will review your application to determine if you are a good match. You will receive either an email or phone call to discuss any further detail not answered on the application.</li>
           <li>We will verify your references listed on the form at this point.</li>
@@ -43,22 +45,55 @@
       <div class="unit gutter pad-t">
         <h2 class="push-1-2">Adoption Fee</h2>
         <p class="push-1-2">All our dogs have adoption fees based on their age. These adoption fees help us cover the cost of taking care of other dogs which includes feeding, medicating, and housing them. It's necessary in order for us to continue our rescue work. None of this money goes towards anything besides the dogs.</p>
-        <ol class="gutter">
+        <ol class="gutter-2">
           <li>Under 2 years old: $500</li>
           <li>2 to 7 years old: $400</li>
           <li>Over 8 years old: $300</li>
         </ol>
       </div>
     </section>
+    <section class="grid gutter-2">
+      <div class="unit gutter pad-t">
+        <h2 class="push-1-2">Adoption Application</h2>
+        <form method="POST" action="https://formspree.io/tracy.khuynh@gmail.com">
+          <div class="push-1-4">
+            <label for="name">Full Name</label>
+            <input id="name" name="name" required>
+          </div>
+          <div class="push-1-4">
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" required>
+          </div>
+          <div class="push-1-4">
+            <label for="tel">Phone Number</label>
+            <input id="tel" type="tel" name="tel" required>
+          </div>
+          <div>
+            <label for="subject">Dog of Interest</label>
+            <select id="subject" name="_subject">
+              <option>Ellie</option>
+              <option>Honey</option>
+              <option>Bolt</option>
+              <option>Otis</option>
+              <option>Chikage</option>
+              <option>Poppy</option>
+            </select>
+          </div>
+        </form>
+      </div>
+      <div class="unit xs-1 pad-t gutter">
+        <a class="btn gutter-2 push-2" href="#">Submit Application</a>
+      </div>
+    </section>
   </main>
 
-  <footer role="contentinfo" class="grid">
-    <div class="unit micro pad-t-1-2">
+  <footer role="contentinfo" class="grid gutter-2">
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit micro pad-t-1-2">
-      <ul class="list-group-inline text-center gutter push-1-2">
-        <li><a class="no-line push-1-2" href="rescues.html">Available Rescues</a></li>
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2 text-right">
+      <ul class="list-group-inline gutter push-1-2">
+        <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </div>
