--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Freedom Dog Rescue</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -20,9 +22,9 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li><a class="no-line gutter" href="index.html">Home</a></li>
-        <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="gutter" href="index.html">Home</a></li>
+        <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
+        <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
@@ -30,18 +32,19 @@
   <main role="main" id="main" tabindex="0">
     <section class="grid relative bg">
       <div class="unit xs-0 m-1">
-        <div class="embed embed-16by9">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+        <div class="embed embed-24by10">
+          <div class="unit xs-1 gutter-2 pin-lb pad-t-2 pad-b-2 gradient">
+            <h1 class="yotta white gutter">Giving Freedom to One Dog at a Time</h1>
+            <h2 class="white gutter">Every dog deserves to live a happy life.</h2>
+            <div class="gutter">
+              <a class="btn" href="adopt.html">Adopt a dog today</a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="unit xs-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
-        <h1 class="yotta white">Giving Freedom to One Dog at a Time</h1>
-        <h2 class="white">Every dog deserves to live a happy life.</h2>
-        <a class="btn" href="adopt.html">Adopt a dog today</a>
       </div>
     </section>
 
-    <section class="grid">
+    <section class="grid gutter-2">
       <div class="unit xs-1 m-1-2 gutter pad-t">
         <h3 class="push-1-2">About Us</h3>
         <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity that was founded in Ottawa in February 2015. We are an all-breed, all-sized foster based rescue that operates out of Ottawa and the surroundings.</p>
@@ -56,7 +59,7 @@
     </section>
 
     <section>
-      <ul class="list-group grid push-0 cards">
+      <ul class="list-group grid push-0 cards gutter-2">
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
@@ -66,7 +69,7 @@
               <h3 class="gutter white">Available for Adoption</h3>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <p>Owning a pet is one of the most fulfilling thing you can do but it can be hard to find the right dog. We're here to help make that happen. When you're ready to find a new family member please come take a look at the sweet dogs that are waiting for you.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
@@ -82,7 +85,7 @@
               <h3 class="gutter white">Adoption Process</h3>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <p>The adoption process can be stressful. There are probably plenty of questions swirling around and we're here to help make the process as smooth and stress-free as it can be. We want you and your future dog to be happy together and the best first step is through our process.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">More info</a>
@@ -92,14 +95,21 @@
       </ul>
     </section>
 
-    <section class="grid">
+    <section class="grid gutter-2">
       <div class="unit xs-1 m-1-2 gutter pad-t">
         <h3 class="push-1-2">Contact Us</h3>
-        <p class="push-1-2">ADOPTIONS: ADOPTIONS@FREEDOMDOGRESCUE.CA</p>
-        <p class="push-1-2">EVENT/FUNDRAISING: FUNDRAISING@FREEDOMDOGRESCUE.CA</p>
-        <p class="push-1-2">INTAKE/OWNER SURRENDER: FREEDOMDOGINTAKE@GMAIL.COM</p>
-        <p class="push-1-2">GENERAL INQUIRIES: FREEDOMDOGRESCUE@GMAIL.COM</p>
-        <p class="push-1-2">DONATIONS: FINANCE@FREEDOMDOGRESCUE.CA</p>
+        <dl class="push-1-4">
+          <dt class="bold">Adoptions</dt>
+          <dd class="push-1-4">adoptions@freedomdogrescue.ca</dd>
+          <dt class="bold">Event/Fundraising:</dt>
+          <dd class="push-1-4">fundraising@freedomdogrescue.ca</dd>
+          <dt class="bold">Intake/Owner Surrender:</dt>
+          <dd class="push-1-4">freedomdogintake@gmail.com</dd>
+          <dt class="bold">General Inquiries:</dt>
+          <dd class="push-1-4">freedomdogrescue@gmail.com</dd>
+          <dt class="bold">Donations:</dt>
+          <dd class="push-1-4">finance@freedomdogrescue.ca</dd>
+        </dl>
       </div>
       <div class="unit xs-1 m-1-2 island">
         <div class="embed embed-4by3">
@@ -109,13 +119,13 @@
     </section>
   </main>
 
-  <footer role="contentinfo" class="grid">
-    <div class="unit micro pad-t-1-2">
+  <footer role="contentinfo" class="grid gutter-2">
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit micro pad-t-1-2">
-      <ul class="list-group-inline text-center gutter push-1-2">
-        <li><a class="no-line push-1-2" href="rescues.html">Available Rescues</a></li>
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2 text-right">
+      <ul class="list-group-inline gutter push-1-2">
+        <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </div>
