--- a/rescues.html
+++ b/rescues.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>FDR Available Rescues</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -20,22 +22,22 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li><a class="no-line gutter" href="index.html">Home</a></li>
-        <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
+        <li><a class="gutter" href="index.html">Home</a></li>
+        <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
+        <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid wrapper">
+    <section class="grid gutter-2">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Available Rescues</h1>
         <p class="push-1-2">These are all the dogs that are currently available for adoption. All the dogs have a name and will have a description on their personality to help you figure out if the dog is a good match for you. Please keep in mind their personality or breed traits as they can strongly sway how well the dog will thrive in your home.</p>
       </div>
     </section>
 
-    <section>
+    <section class="gutter-2">
       <ul class="list-group grid push-0">
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
@@ -46,7 +48,17 @@
               <h2 class="gutter white giga">Ellie</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Border Collie</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Female</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">4.5 years old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">Yes</dd>
+              </dl>
+              <p>My name is Ellie. I love playing in the snow and am very friendly towards everyone, people and animals alike!</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -62,7 +74,17 @@
               <h2 class="gutter white giga">Honey</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Pembroke Corgi</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Male</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">5 years old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">Yes</dd>
+              </dl>
+              <p>My name is Honey. I'm a little shy but once I get to know someone I love to cuddle with my human.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -78,7 +100,17 @@
               <h2 class="gutter white giga">Bolt</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Husky</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Male</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">3 years old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">Yes</dd>
+              </dl>
+              <p>My name is Bolt. I'm loud and full of energy but I can be very sweet as well. I love to go on long walks or runs.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -94,7 +126,17 @@
               <h2 class="gutter white giga">Otis</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Pug</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Male</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">8 months old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">In progress</dd>
+              </dl>
+              <p>My name is Otis. I love to curl up in warm blankets and spend quiet days doing nothing with my human.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -110,7 +152,17 @@
               <h2 class="gutter white giga">Chikage</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Shiba Inu</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Male</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">4 years old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">Yes</dd>
+              </dl>
+              <p>My name is Chikage. I'm independent but I still love to spend time with my human especially on long walks.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -126,7 +178,17 @@
               <h2 class="gutter white giga">Poppy</h2>
             </div>
             <div class="unit xs-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+              <dl class="push-1-4">
+                <dt class="bold">Breed</dt>
+                <dd class="push-1-4">Pitbull</dd>
+                <dt class="bold">Sex</dt>
+                <dd class="push-1-4">Female</dd>
+                <dt class="bold">Age</dt>
+                <dd class="push-1-4">2 years old</dd>
+                <dt class="bold">Housetrained</dt>
+                <dd class="push-1-4">Yes</dd>
+              </dl>
+              <p>My name is Poppy. I'm super friendly and gentle with everyone I meet. I have the biggest smile for you.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
@@ -137,13 +199,13 @@
     </section>
   </main>
 
-  <footer role="contentinfo" class="grid">
-    <div class="unit micro pad-t-1-2">
+  <footer role="contentinfo" class="grid gutter-2">
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit micro pad-t-1-2">
-      <ul class="list-group-inline text-center gutter push-1-2">
-        <li><a class="no-line push-1-2" href="rescues.html">Available Rescues</a></li>
+    <div class="unit xs-1 m-1-2 micro pad-t-1-2 text-right">
+      <ul class="list-group-inline gutter push-1-2">
+        <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </div>
