Add an icon to the navigation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li><a class="gutter" href="index.html">Home</a></li>
+        <li>
+          <a class="gutter" href="index.html">
+            <i class="icon i-32 push-r-1-4">
+              <svg><use xlink:href="images/icons.svg#puppy"></use></svg>
+            </i>
+            <span class="inline icon-text">Freedom Dog Rescue</span>
+          </a>
+        </li>
         <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
         <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
