--- a/rescues.html
+++ b/rescues.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>FDR Available Rescues</title>
+  <title>FDR — Available Rescues</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="favicon-196.png">
@@ -22,7 +22,14 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
-        <li><a class="gutter" href="index.html">Home</a></li>
+        <li>
+          <a class="gutter" href="index.html">
+            <i class="icon i-32 push-r-1-4">
+              <svg><use xlink:href="images/icons.svg#puppy"></use></svg>
+            </i>
+            <span class="inline icon-text">Freedom Dog Rescue</span>
+          </a>
+        </li>
         <li><a class="gutter" href="rescues.html">Available Rescues</a></li>
         <li><a class="gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
